Fixed problem with overflow in part toolbar

--- a/In2iGui/bin/combined.css
+++ b/In2iGui/bin/combined.css
@@ -1883,6 +1883,12 @@ div.in2igui_toolbar_right
 	top: 0;
 }
 
+div.in2igui_toolbar_body_fixed_height
+{
+	height: 56px;
+	overflow: hidden;
+}
+
 /********************************** Icon ************************/
 
 
